fixed IE not showing xhtml and added new parameter for editing
git-svn-id: https://source.eait.uq.edu.au/svn/maenad-data-registry/trunk@440 a06b0660-b68b-0410-9a37-e6c9a29c9ca9

--- a/data-registry-webapp/src/main/webapp/css/style.css
+++ b/data-registry-webapp/src/main/webapp/css/style.css
@@ -931,7 +931,7 @@ p.centenary {
 #signin_submit {
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
-    background: #39d url('images/bg-btn-blue.png') repeat-x scroll 0 0;
+    background: #39d url('../images/bg-btn-blue.png') repeat-x scroll 0 0;
     border: 1px solid #39D;
     color: #fff;
     text-shadow: 0 -1px 0 #39d;
